[package]
name = "cc-swap"
version = "0.1.0"
edition = "2024"

[dependencies]
slint = { version = "1.8", default-features = false, features = [
    "std",
    "compat-1-2",
    "backend-winit",
    "renderer-software",
] }
rfd = { version = "0.15", default-features = false, features = ["common-controls-v6"] }

[build-dependencies]
slint-build = "1.8"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
