[package]
name = "cc-swap"
version = "1.1.1"
edition = "2024"

[dependencies]
slint = { version = "1.8", default-features = false, features = [
    "std",
    "compat-1-2",
    "backend-winit",
    "renderer-software",
] }

[build-dependencies]
slint-build = "1.8"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
